--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 
-								<h3><a href="#">Linked Lists</a></h3>
+								<h3><a href="https://github.com/mhonda2/LinkedList">Linked Lists</a></h3>
 
 								<p>Ornare nulla proin odio consequat.</p>
 
