--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 
-								<h3><a href="https://github.com/mhonda2/my-projects/blob/C-projects/ascii_converter.c">Ascii Converter</a></h3>
+								<h3><a href="https://github.com/mhonda2/Tree">Trees</a></h3>
 
 								<p>Ornare nulla proin odio consequat.</p>
 
